[package]
name = "upchuk"
version = "1.0.0"
authors = ["uddalak sealuddalak84@gmail.com"]
edition = "2024"

description = "A CLI tool to manage and check URLs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/UD11/upchuk"
homepage = "https://github.com/UD11/upchuk"
documentation = "https://github.com/UD11/upchuk"


[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = "symbols"


[dependencies]
chrono = "0.4.41"
clap = { version = "^4", features = ["derive"] }
dirs-next = "2.0.0"
reqwest = { version = "0.12.22", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
